fixed image css on mobile

--- a/src/components/NewsList/News/News.scss
+++ b/src/components/NewsList/News/News.scss
@@ -46,6 +46,8 @@
         position: absolute;
         top: 8px;
         width: calc(40% - 20px);
+        max-height: calc(100% - 20px);
+        overflow: hidden;
       }
     }
   }
